fix settings icons and button alignment

--- a/assets/less/views/settings.less
+++ b/assets/less/views/settings.less
@@ -26,6 +26,8 @@
 
 	margin: 5px 0;
 
+	text-align: left;
+
 	@media @mobile {
 		width: 100%;
 	}
